@@ -27,4 +27,4 @@ resources:
   homepage: http://github.com/Test-More/test-more/
   license: http://dev.perl.org/licenses/
   repository: http://github.com/Test-More/test-more/
-version: 1.301001_084
+version: 1.301001_085
