@@ -2,18 +2,11 @@
 use strict;
 use warnings;
 
-use Test::CanFork;
+#use Test::CanFork;
 
 use IO::Pipe;
 use Test::Builder;
 use Test::More tests => 1;
-
-# On systems that fake forking, localized vars get unwound improperly
-# post-fork. the 'subtest' function localizes $@ and $!, as such this
-# test will fail on fake-fork systems up until 5.20.2
-plan skip_all => "Skipping fork tests on $^O"
-    if ($^O eq 'MSWin32' || $^O eq 'NetWare')
-    && !eval { require v5.20.2 };
 
 subtest 'fork within subtest' => sub {
     plan tests => 2;
